...
            if selectedTab == .resources {
                Button {
                    selectedTab = .home
                } label: {
                    Label("戻る", systemImage: "chevron.left")
                }
                .accessibilityIdentifier("backScreenButton")
            } else if selectedTab == .players {
                Button {
                    selectedTab = .resources
                } label: {
                    Label("資源管理", systemImage: "cube.box")
                }
...
            if selectedTab == .resources {
                Button {
                    selectedTab = .players
                } label: {
                    Label("プレイヤー", systemImage: "person.3")
                }
                .accessibilityIdentifier("nextScreenButton")
            } else {
                Color.clear.frame(width: 112, height: 32)
            }
        }
        .frame(height: 48)
        .padding(.horizontal)
...
